1999-01-13  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.h (GnomeIconList): Added a total_height field
	that holds the maximum of the height of all the icon rows and the
	window height.

	* gnome-icon-list.c (scroll_timeout): Do not allow auto-scrolling
	to go past the end of the icon list.
	(gnome_icon_list_set_vadjustment): Connect to the "changed" signal
	of the adjustment as well, to notice when the whole adjustment
	changes (this happens on gil_scrollbar_adjust()).
	(gil_scrollbar_adjust): Compute the gil->total_height.
	(gil_mark_region): Do not paint the selection rectangle past the
	gil->total_height.  This makes the icon list not look amateurish
	anymore.

	* gnome-canvas-image.c (gnome_canvas_image_update): Check whether
	image->im is NULL and do not crash if it is.  Thanks to Erik
	Andersen <andersen@xmission.com> for pointing this out.

1999-01-13  Felix Bellaby <felix@pooh.u-net.com>

	* gnome-client.c (master_client_clean_up): disconnect the master
	client at exit of app to prevent io errors on session manager side.

1999-01-12  Manish Vachharajani <mvachhar@vger.rutgers.edu>

	* gnome-ice.c (new_ice_connection): Set FD_CLOEXEC on 
	ice connection descriptors

1999-01-12  Chris Lahey  <clahey@umich.edu>

	* gnome-app-helper.h, gnome-app-helper.c
	(gnome_app_ui_configure_configurable): Added configurable
	keybindings for menu items.  Items are configured by adding to
	~/.gnome/Gnome in the [Menus] section.  The menu items available
	for keybinding configuration are listed in gnome_app_helper.c
	(menu_names).  The defaults are listed in gnome_app_helper.c
	(menu_defaults).

	Configuration consists of two (key, value) pairs for each menu
	item.  The first is Menu-*-accelerator-key which is assigned a
	value equal to the ASCII value of the key you want to bind to.
	The second is Menu-*-ac-mods which is assigned the GdkModifierType
	(in decimal) of the set of modifiers you want your keybinding to