@@ -1,3 +1,7 @@
+1999-01-14  Felix Bellaby <felix@pooh.u-net.com>
+
+	* gnome-client.c (client_set_ghash): do not set null properties.
+
 1999-01-13  Federico Mena Quintero  <federico@nuclecu.unam.mx>
 
 	* gnome-icon-list.h (GnomeIconList): Added a total_height field
